# StarAtlasFootball

./: .replit  CREWMOCKDATA  IMPLEMENTATION_STATUS.md  RUNNING_SERVICES.md  STAR_ATLAS_INTEGRATION.md  design_guidelines.md  package-lock.json  package.json  replit.md  start-both-services.sh  tailwind.config.ts
attached_assets/: Pasted-Ecco-la-prompt-per-Replit-Agent-RECUPERO-PLAYER-PROFILE-NAME-ISTRUZIONI-PER-REPLIT-AGENT-OBIETTI-1762441553771_1762441553772.txt  Pasted-Ecco-la-versione-definitiva-sistemata-e-organizzata-PROMPT-COMPLETA-PER-REPLIT-AGENT--1762386535522_1762386535522.txt
blockchain-service/: Cargo.toml
blockchain-service/src/: main.rs  models.rs  star_atlas.rs
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  CrewCard.tsx  FormationSelector.tsx  MatchCard.tsx  MatchEventLog.tsx  PerkCard.tsx  RankingsTable.tsx  StatCard.tsx  WalletConnectButton.tsx  WalletSelector.tsx
client/src/components/examples/: CrewCard.tsx  FormationSelector.tsx  MatchCard.tsx  MatchEventLog.tsx  PerkCard.tsx  RankingsTable.tsx  StatCard.tsx  WalletConnectButton.tsx
client/src/lib/: config.ts  wallet-context.tsx
client/src/pages/: Dashboard.tsx  Landing.tsx  Matches.tsx  Perks.tsx  ProfileSelector.tsx  Rankings.tsx  Roster.tsx  test.ts
client/src/pages/components/: crew-card.tsx
server/: config.ts  routes.ts  storage.ts
server/services/: blockchain.ts
shared/: schema.ts
